--- a/dice.html
+++ b/dice.html
@@ -7,21 +7,23 @@
     <link rel="stylesheet" href="diceStyle.css" />
   </head>
   <body>
-    <div >
+    <main class="main">
+    <section>
       <button class="btn newgame">new game</button>
       <button class="btn roll">roll dice</button>
       <button class="btn hold">hold</button>
-    </div>
+    </section>
 
-    <div class="players">
-      <div class="player1">
+    
+      <section class="player1">
         <h3>player 1</h3>
         <div>CURRENT SCORE : <span class="current1">0</span></div>
-      </div>
-      <div class="player2">
+      </section>
+      <section class="player2">
         <h3>player 2</h3>
         <div>CURRENT SCORE : <span class="current2">0</span></div>
-      </div>
-    </div>
+      </section>
+
+    </main>
   </body>
 </html>
